[tool.poetry]
name = "graph-theory"
version = "0.1.0"
description = ""
authors = ["Valdemar Emil Otte Petersen <36330221+ValdemarOtte@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "graph_theory"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.10.1"
ruff = "^0.1.4"
mypy = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
